@@ -1,3 +1,12 @@
+2003-07-13  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	* pt.c (push_access_scope_real): Remove.
+	(push_access_scope): Move code from push_access_scope_real.
+	(pop_access_scope): Don't check for TEMPLATE_DECL.
+	(instantiate_template): Defer access checking during template
+	substitution.
+	(regenerate_decl_from_template): Tidy.
+
 2003-07-11  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	PR c++/11437
